# FBX2glTF

./: .gitignore  .gitmodules  build.bat
cmake/: CMakeLists.txt
src/: FBX2glTF.cpp  FBX2glTF.h  FBX2glTF_all.cpp
src/fbx/: Fbx2Raw.cpp
src/fbx/materials/: 3dsMaxPhysicalMaterial.cpp  StingrayPBSMaterial.cpp  TraditionalMaterials.hpp
src/gltf/: GltfModel.hpp  Raw2Gltf.cpp  Raw2Gltf.hpp  TextureBuilder.cpp
src/gltf/properties/: MeshData.hpp  PrimitiveData.cpp  PrimitiveData.hpp
src/raw/: RawModel.cpp  RawModel.hpp
src/utils/: File_Utils.hpp  String_Utils.hpp
